--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^4.14.0",
     "knex": "^0.12.9",
-    "pg": "^6.1.5"
+    "pg": "^6.1.5",
+    "treeize": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
